<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.androidbelieve.materialnavigationdrawer.EjerciciosFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="#ffffff">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="431dp"
            android:layout_gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView5"
                    android:layout_column="4"
                    android:src="@mipmap/dia1" />

                <Button
                    android:text="@string/text2"
                    android:id="@+id/button5"
                    android:layout_column="6"
                    android:layout_marginLeft="50dp"
                    android:background="#00ffffff"
                    android:textSize="30dp"
                    android:textColor="#517bcb" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView6"
                    android:layout_column="4"
                    android:src="@mipmap/dia2" />

                <Button
                    android:text="@string/text3"
                    android:id="@+id/button6"
                    android:layout_column="6"
                    android:layout_marginLeft="050dp"
                    android:background="#00ffffff"
                    android:textSize="30dp"
                    android:textColor="#ffc731" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView7"
                    android:layout_column="4"
                    android:src="@mipmap/dia3" />

                <Button
                    android:text="@string/text4"
                    android:id="@+id/button7"
                    android:layout_column="6"
                    android:layout_marginLeft="50dp"
                    android:background="#00ffffff"
                    android:textSize="30dp"
                    android:textColor="#7bb657" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView8"
                    android:layout_column="4"
                    android:src="@mipmap/dia4" />

                <Button
                    android:text="@string/text5"
                    android:id="@+id/button8"
                    android:layout_column="6"
                    android:layout_marginLeft="50dp"
                    android:background="#00ffffff"
                    android:textSize="30dp"
                    android:textColor="#f38746" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView9"
                    android:layout_column="4"
                    android:src="@mipmap/dia5" />

                <Button
                    android:text="@string/text6"
                    android:id="@+id/button9"
                    android:layout_column="6"
                    android:layout_marginLeft="50dp"
                    android:background="#00ffffff"
                    android:textSize="30dp"
                    android:textColor="#ababab" />
            </TableRow>

        </TableLayout>

    </FrameLayout>

</FrameLayout>
